将项目格式转换为maven的配置形式 使用第三方工具包, 将代码改写为适配jdk1.8的语法格式 改动的部分未经测试,生产环境上请检查